--- a/polymer-cordova-network-activity.html
+++ b/polymer-cordova-network-activity.html
@@ -12,7 +12,7 @@
 	Polymer({
 		is: 'polymer-cordova-network-activity',
 		properties: {
-			running: {
+			visible: {
 				type: Boolean,
 				notify: true,
 				observer: '_runningChanged'
@@ -20,23 +20,23 @@
 		},
 		
 		// Public methods
-		start: function() {
-			this.running = true;
+		show: function() {
+			this.visible = true;
 		},
-		stop: function() {
-			this.running = false;
+		hide: function() {
+			this.visible = false;
 		},
 		
 		// Private methods
 		_runningChanged: function(newValue, oldValue) {
-			if (typeof NetworkActivity == 'undefined') {
+			if (typeof NetworkActivityIndicator == 'undefined') {
 				return;
 			}
 
 			if (newValue) {
-				NetworkActivity.activityStart();
+				NetworkActivityIndicator.show();
 			} else {
-				NetworkActivity.activityStop();
+				NetworkActivityIndicator.hide();
 			}
 		}
 	});
