--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </head>
 
     <body>
-        <iron-component-page src="paper-drawer-doc-helper.html"></iron-component-page>
+        <iron-component-page></iron-component-page>
     </body>
 </html>
