Comply with style guideline

--- a/polymer-cordova-network-activity.html
+++ b/polymer-cordova-network-activity.html
@@ -9,7 +9,7 @@ Web component to control Network Activity Indicator via Cordova plugin.
 ```
 
 -->
-<dom-module id='polymer-cordova-network-activity'>
+<dom-module id="polymer-cordova-network-activity">
 </dom-module>
 
 <script>
